src/style.css
:root {
	--white: #FFF;
	--black: #000;
}

html {
	background-color: var(--white);
	color: var(--black);
	font-family: 'Courier New', Courier, monospace;
	height: 100%;
}

* {
	box-sizing: border-box;
}

body {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
	gap: 1rem;
	min-height: 100%;
}

main {
	display: grid;
	grid-template-columns: auto 1fr;
	align-items: flex-start;
	width: 100%;
	min-height: 100%;
}

main > section {
	padding: 1rem;
}

h1 {
	grid-column: 1 / -1;
	text-align: initial;
	font-size: 200%;
	font-weight: bold;
}

#controls {
	display: grid;
	grid-template-columns: auto 1fr;
	grid-gap: 0.25rem 1rem;
	width: 100%;
}

#controls h2 {
	grid-column: 1 / -1;
}

#preview {
	position: sticky;
	top: 0;
	min-width: 0;
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	width: 100%;
}

#preview > * {
	flex: 1;
}

hr {
	grid-column: span 2;
	width: 100%;
	margin: 0;
	border: 0;
	border-top: solid 1px #BBB;
}

label {
	text-align: right;
	align-self: center;
}

label[title] {
	cursor: help;
}


input[type="file"] {
	width: 100%;
}

.range {
	display: flex;
	align-items: center;
	gap: 0.5rem;
}

.range > input[type="range"] {
	flex: auto;
	width: 100%;
}

.range > input[type="number"] {
	flex: none;
	min-width: 4rem;
}

button:disabled,
input:disabled {
	opacity: 0.5;
	cursor: not-allowed;
}

button {
	width: 100%;
}

input,
button {
	font-family: inherit;
	cursor: pointer;
	padding: 0.25rem;
	min-width: 0;
}

details > summary {
	cursor: pointer;
}

figure {
	position: relative;
	border: solid 1px #888;
}

figure > figcaption {
	position: absolute;
	top: 0;
	left: 0;
	background: var(--white);
	border: solid 1px #888;
	border-top: 0;
	border-left: 0;
	padding: 0.25rem;
}

figure > div {
	width: 100%;
	height: 50vh;
	height: calc(50vh - 2rem);
	background-color: #888;
}

figure > div > img {
	width: 100%;
	height: 100%;
	object-fit: contain;
}

canvas,
img {
	image-rendering: pixelated;
	display: block;
}

figure figcaption button {
	width: auto;
}

#preview-container {
	overflow: auto;
	display: flex;
}

#preview-container canvas {
	margin: auto;
}

.fill {
	grid-column: 1 / -1;
}

.grid {
	grid-column: 1 / -1;
	justify-self: center;
	display: grid;
	width: 100%;
	max-width: 50vh;
	grid-gap: 1px;
	background: #888;
	border: solid 1px #888;
}

.grid button {
	background-color: #000;
	border: none;
	width: 100%;
	height: 0;
	padding: 0;
	padding-bottom: 100%;
}

.grid button[value="true"] {
	background-color: #FFF;
}

.grid button:enabled:hover {
	background-color: #333;
}

.grid button[value="true"]:enabled:hover {
	background-color: #BBB;
}

footer {
	position: fixed;
	bottom: 0.25rem;
	right: 1rem;
	font-size: 75%;
	text-align: right;
}

dialog {
	color: var(--black);
	background-color: var(--white);
	text-align: initial;
	max-width: 48rem;
}

dialog p:not(:first-child) {
	margin-top: 0.5rem;
}

dialog p:not(:last-child) {
	margin-bottom: 0.5rem;
}

dialog a {
	color: inherit;
	opacity: 0.8;
}

dialog a:visited {
	opacity: 0.6;
}

dialog a:hover {
	opacity: 0.9;
}

dialog a:active {
	opacity: 1.0;
}

dialog::backdrop,
dialog+.backdrop {
	background-color: rgba(0, 0, 0, 0.8);
}

dialog+.backdrop {
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

dialog nav {
	width: 100%;
	flex: none;
	display: flex;
	flex-wrap: wrap;
}

dialog nav button {
	margin-inline-start: auto;
	width: auto;
}

@media (prefers-color-scheme: dark) {
	:root {
		color-scheme: dark;
		--white: #000;
		--black: #FFF;
	}
}

@media screen and (max-width: 36rem) {
	h1 {
		text-align: center;
		font-size: 125%;
	}

	main {
		display: block;
	}

	figure > div {
		height: unset;
	}
}

